#13 docs for S04 - added snippet candidate